# imu-datalogger

./: CMakeLists.txt  README.md  main.c
graficos_imu/: PlotaIMU.py  mpu6050_movimentando.csv  mpu6050_parado.csv
lib/SD/: SD.c  SD.h
lib/buzzer/: buzzer.c  buzzer.h
lib/mpu6050/: mpu6050.c  mpu6050.h
